# ConcertistaMIDI

./: .gitignore  CMakeLists.txt  LEEME.md  LICENSE.md  Licencia.txt  icono.tga
codigo/: CMakeLists.txt  configuracion_cmake.h++.in  controlador_juego.c++  controlador_juego.h++  principal.c++  registro.c++  registro.h++  version.h++  version.h++.in
codigo/control/: CMakeLists.txt  base_de_datos.c++  base_de_datos.h++  configuracion.c++  configuracion.h++  datos_musica.c++  datos_musica.h++  nota_activa.h++  pista.c++  rango_organo.c++  rango_organo.h++  teclado_organo.c++  teclado_organo.h++  tiempos_nota.h++
codigo/dispositivos/: CMakeLists.txt  casio_lks250.c++  casio_lks250.h++  organo_generico.c++  organo_generico.h++  raton.c++  raton.h++  sintetizador_midi.c++  sintetizador_midi.h++  teclas.h++  teclas_luminosas.c++  teclas_luminosas.h++
codigo/dispositivos_midi/: CMakeLists.txt  casio_lks250.c++  controlador_midi.c++  controlador_midi.h++  datos_dispositivo.h++  dispositivo_midi.c++  dispositivo_midi.h++  organo_generico.c++  secuenciador.c++  secuenciador.h++  secuenciador_alsa.c++  secuenciador_alsa.h++  sintetizador_midi.c++  sintetizador_midi.h++  teclas_luminosas.c++  teclas_luminosas.h++
codigo/elementos_graficos/: CMakeLists.txt  boton.c++  boton.h++  casilla_verificacion.c++  casilla_verificacion.h++  configuracion_dispositivo.c++  configuracion_dispositivo.h++  configuracion_pista.c++  control_deslizante.c++  control_deslizante.h++  etiqueta.c++  etiqueta.h++  fila.c++  lista_opciones.c++  lista_opciones.h++  notificacion.c++  notificacion.h++  organo.c++  organo.h++  panel_desplazamiento.c++  panel_desplazamiento.h++  puntuacion.c++  puntuacion.h++  selector_archivos.c++  tabla.c++  tabla.h++  tablero_notas.c++  tablero_notas.h++
codigo/libmidi/: CMakeLists.txt  Midi.c++  Midi.h++  MidiComm.c++  MidiComm.h++  MidiEvent.c++  MidiEvent.h++  MidiTrack.c++  MidiTrack.h++  MidiUtil.c++
codigo/libreria_midi/: CMakeLists.txt  casio_lks250.c++  casio_lks250.h++  controlador_midi.c++  controlador_midi.h++  definiciones_midi.h++  dispositivo_midi.c++  dispositivo_midi.h++  evento_midi.c++  evento_midi.h++  organo_generico.h++  sintetizador_midi.c++  sintetizador_midi.h++
codigo/recursos/: administrador_recursos.c++  administrador_recursos.h++  color.c++  color.h++  tipografia.c++  tipografia.h++
codigo/util/: funciones.c++  funciones.h++  octava.c++  octava.h++  texto.c++  texto.h++  usuario.c++  usuario.h++
codigo/ventanas/: CMakeLists.txt  ventana.h++  ventana_configuracion.c++  ventana_configuracion.h++  ventana_organo.c++  ventana_organo.h++  ventana_organo_libre.c++  ventana_organo_libre.h++  ventana_seleccion_musica.c++  ventana_seleccion_musica.h++  ventana_seleccion_pista.c++  ventana_titulo.c++  ventana_titulo.h++
extra/instalacion/: Concertista MIDI.desktop
musica/Música Católica/: P. Cesáreo Gabaráin - Cristo te necesita.midi  P. Cesáreo Gabaráin - Hoy he Vuelto Madre a Recordar.midi
texturas/: control_deslizante_boton.tga  control_deslizante_fondo.tga  control_deslizante_relleno.tga  flecha_abajo.tga  flecha_arriba.tga  flecha_izquierda.tga  icono.tga
varios/: Concertista MIDI.desktop
