add_subdirectory(archivos)
add_subdirectory(control)
add_subdirectory(dispositivos)
add_subdirectory(elementos_graficos)
add_subdirectory(libmidi)
add_subdirectory(libreria_midi)
add_subdirectory(dispositivos_midi)
add_subdirectory(recursos)
add_subdirectory(util)
add_subdirectory(ventanas)

set(codigo
	${archivos}
	${control}
	${dispositivos}
	${elementos_graficos}
	${libmidi}
	${libreria_midi}
	${dispositivos_midi}
	${recursos}
	${util}
	${ventanas}
	${CMAKE_CURRENT_SOURCE_DIR}/principal.c++
	${CMAKE_CURRENT_SOURCE_DIR}/controlador_juego.c++
	${CMAKE_CURRENT_SOURCE_DIR}/fps.c++
	${CMAKE_CURRENT_SOURCE_DIR}/registro.c++
	PARENT_SCOPE
)
